# second-brain

./: .env.example  .gitignore  CLAUDE-PROMPT.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: nuggets-curate.md  nuggets-ingest.md  nuggets-reflect.md
.claude/skills/nuggets-analyze/: SKILL.md
.claude/skills/nuggets-analyze/references/: extraction-guide.md  output-schema.md
.claude/skills/nuggets-curate/: SKILL.md
.claude/skills/nuggets-explore/: SKILL.md
.claude/skills/nuggets-explore/references/: query-patterns.md
.claude/skills/nuggets-fetch/: SKILL.md
.claude/skills/nuggets-fetch/references/: metadata-parsing.md
data/analysis/youtube/chris-williamson/: 2025-12-25-hLIvhTiytIE.json
data/analysis/youtube/tim-ferriss/: 2025-12-30-qSUqZtipYf0.json
data/analysis/youtube/unknown/: unknown-unknown.json
data/configs/: life-hacks-style.json
data/raw/twitter/thebeautyofsaas/: 2025-12-31-2006104228381721052.json
data/raw/youtube/chris-williamson/: 2025-12-25-hLIvhTiytIE.json
docs/plans/: 2024-12-30-knowledge-library-design.md  2024-12-30-phase1-foundation.md  2024-12-30-phase2-index-search.md  2024-12-31-hierarchical-knowledge-library-design.md  2024-12-31-hierarchical-library-implementation.md  2024-12-31-phase3-curation.md  2024-12-31-phase4-export.md  2024-12-31-phase5-skills.md  podcast-nuggets-masterplan.md
prompts/: extract_nuggets.md
scripts/: migrate_to_library.py
src/nuggets/: __init__.py  categories.py  cli.py  config.py  curation.py  index.py  library.py  models.py
src/nuggets/analyze/: __init__.py  extractor.py
src/nuggets/export/: __init__.py  apple_notes.py  collection.py  markdown.py
src/nuggets/transcribe/: __init__.py  twitter.py  whisper.py  youtube.py
tests/: test_categories.py  test_curation.py  test_export.py  test_index.py  test_integration.py  test_library.py  test_models.py  test_twitter.py  test_youtube.py
(+18 files in other folders)
